--- a/Index.html
+++ b/Index.html
@@ -10,24 +10,22 @@
 <nav id="nav_1_nome"><strong>Calculadora de operações básicas</strong></nav>
 </header>
     <div id="caixa_calculadora">
-        <div id="caixa_definitiva">
-<div class="teclas" id="numero1">a</div>
-<div class="teclas" id="numero2"></div>
-<div class="teclas" id="numero3"></div>
-<div class="teclas" id="numero4"></div>
-<div class="teclas" id="numero5"></div>
-<div class="teclas" id="numero6"></div>
-<div class="teclas" id="numero7"></div>
-<div class="teclas" id="numero8"></div>
-<div class="teclas" id="numero9"></div>
-<div class="teclas" id="numero0"></div>
-<div class="teclas" id="soma"></div>
-<div class="teclas" id="subtracao"></div>
-<div class="teclas" id="multiplicacao"></div>
-<div class="teclas" id="divisao"></div>
-<div class="teclas" id="resultado"></div>
+<div class="teclas" id="numero1">1</div>
+<div class="teclas" id="numero2">2</div>
+<div class="teclas" id="numero3">3</div>
+<div class="teclas" id="numero4">4</div>
+<div class="teclas" id="numero5">5</div>
+<div class="teclas" id="numero6">6</div>
+<div class="teclas" id="numero7">7</div>
+<div class="teclas" id="numero8">8</div>
+<div class="teclas" id="numero9">9</div>
+<div class="teclas" id="numero0">0</div>
+<div class="teclas" id="soma">+</div>
+<div class="teclas" id="subtracao">-</div>
+<div class="teclas" id="multiplicacao">x</div>
+<div class="teclas" id="divisao">÷</div>
+<div class="teclas" id="resultado">=</div>
 <div class="teclas" id="caixa_vazia"></div>
-    </div>
     </div>
 <footer>
     <strong id="direitos">Criado por Vinícius Rodrigues, do 2°D. Todos os direitos reservados.</strong>
